--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,20 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <header>
+            <nav>
+                <div>
+                    <ul>
+                        <li><a href="{{ path('home') }}">Accueil</a></li>
+                        <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                        <li><a href="{{ path('app_register') }}">Inscription</a></li>
+                        <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
+
