user profil + edit

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
                 <div>
                     <ul>
                         <li><a href="{{ path('home') }}">Accueil</a></li>
+                        <li><a href="{{ path('user_profil') }}">Profil</a></li>
                         <li><a href="{{ path('app_login') }}">Connexion</a></li>
                         <li><a href="{{ path('app_register') }}">Inscription</a></li>
                         <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
