--- a/templates/user_profil/edit.html.twig
+++ b/templates/user_profil/edit.html.twig
@@ -10,9 +10,9 @@
     {{ form_row(form.username) }}
     {{ form_row(form.first_name) }}
     {{ form_row(form.last_name) }}
-    {{ form_row(form.email) }}
     {{ form_row(form.city) }}
-    {{ form_row(form.password) }}
+    {{ form_row(form.email, { 'attr':{'disabled':'disabled'} }) }}
+    {{ form_row(form.password, { 'attr':{'disabled':'disabled'} }) }}
     <input type="submit" class="btn btn-primary">
     <a class="btn btn-primary" href="{{ path('user_profil') }}">Annuler</a>
 
