--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,16 @@
 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7T0TH6Y4X8"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-7T0TH6Y4X8');
+        </script>
     </body>
 </html>
 
