--- a/templates/user_profil/edit.html.twig
+++ b/templates/user_profil/edit.html.twig
@@ -1,21 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserProfilController!{% endblock %}
+{% block title %}My QUizz - Editer mon profil {% endblock %}
 
 {% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            {{ form_start(form) }}
+            {{ form_errors(form) }}
 
-{{ form_start(form) }}
-    {{ form_errors(form) }}
+            {{ form_row(form.username) }}
+            {{ form_row(form.first_name) }}
+            {{ form_row(form.last_name) }}
+            {{ form_row(form.city) }}
+            <input type="submit" class="btn btn-primary">
+            <a class="btn btn-primary" href="{{ path('user_profil') }}">Annuler</a>
 
-    {{ form_row(form.username) }}
-    {{ form_row(form.first_name) }}
-    {{ form_row(form.last_name) }}
-    {{ form_row(form.city) }}
-    {{ form_row(form.email, { 'attr':{'disabled':'disabled'} }) }}
-    {{ form_row(form.password, { 'attr':{'disabled':'disabled'} }) }}
-    <input type="submit" class="btn btn-primary">
-    <a class="btn btn-primary" href="{{ path('user_profil') }}">Annuler</a>
-
-{{ form_end(form) }}
+            {{ form_end(form) }}
+        </div>
+    </div>
+</div>
 
 {% endblock %}
