--- a/templates/user_profil/index.html.twig
+++ b/templates/user_profil/index.html.twig
@@ -3,21 +3,25 @@
 {% block title %}Hello UserProfilController!{% endblock %}
 
 {% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            {{ form_start(form) }}
+            {{ form_errors(form) }}
 
-    {{ form_start(form) }}
-        {{ form_errors(form) }}
+            {{ form_row(form.username, { 'attr':{'disabled':'disabled'} }) }}
+            {{ form_row(form.first_name, { 'attr':{'disabled':'disabled'} }) }}
+            {{ form_row(form.last_name, { 'attr':{'disabled':'disabled'} }) }}
+            {{ form_row(form.city, { 'attr':{'disabled':'disabled'} }) }}
+            {#        {{ form_row(form.submit) }}#}
+            {{ form_end(form) }}
 
-        {{ form_row(form.username, { 'attr':{'disabled':'disabled'} }) }}
-        {{ form_row(form.first_name, { 'attr':{'disabled':'disabled'} }) }}
-        {{ form_row(form.last_name, { 'attr':{'disabled':'disabled'} }) }}
-        {{ form_row(form.city, { 'attr':{'disabled':'disabled'} }) }}
-        {{ form_row(form.email, { 'attr':{'disabled':'disabled'} }) }}
-        {{ form_row(form.password, { 'attr':{'disabled':'disabled'} }) }}
-{#        {{ form_row(form.submit) }}#}
-    {{ form_end(form) }}
+            <a class="btn btn-primary" href="{{ path('user_edit_profil') }}">Editer mon profil</a>
+            <a class="btn btn-primary" href="{{ path('edit_mail') }}">Changer mon adresse mail</a>
+            <a class="btn btn-primary" href="{{ path('edit_password') }}">Changer mon mot de passe</a>
+            <a class="btn btn-primary" href="#">Supprimer mon profil</a>
+        </div>
+    </div>
+</div>
 
-    <a class="btn btn-primary" href="{{ path('user_edit_profil') }}">Editer mon profil</a>
-    <a class="btn btn-primary" href="{{ path('edit_mail') }}">Changer mon adresse mail</a>
-    <a class="btn btn-primary" href="{{ path('edit_password') }}">Changer mon mot de passe</a>
-    <a class="btn btn-primary" href="#">Supprimer mon profil</a>
 {% endblock %}
