--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,7 +17,7 @@
                 {{ form_row(registrationForm.plainPassword) }}
                 {{ form_row(registrationForm.agreeTerms) }}
 
-                <button class="btn">Register</button>
+                <button class="btn btn-grad">Register</button>
                 {{ form_end(registrationForm) }}
             </div>
         </div>
