--- a/templates/user_profil/edit.html.twig
+++ b/templates/user_profil/edit.html.twig
@@ -13,8 +13,8 @@
             {{ form_row(form.first_name) }}
             {{ form_row(form.last_name) }}
             {{ form_row(form.city) }}
-            <input type="submit" class="btn btn-primary">
-            <a class="btn btn-primary" href="{{ path('user_profil') }}">Annuler</a>
+            <input type="submit" class="btn btn-grad">
+            <a class="btn btn-grad" href="{{ path('user_profil') }}">Annuler</a>
 
             {{ form_end(form) }}
         </div>
