--- a/templates/quizz/show.html.twig
+++ b/templates/quizz/show.html.twig
@@ -22,7 +22,7 @@
                     </div>
                 {% endfor %}
 
-                <input type="submit" class="btn btn-primary">
+                <input type="submit" class="btn btn-grad">
             </form>
 
         </div>
