--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
                         </div>
                     #}
 
-                    <button class="btn btn-lg btn-primary" type="submit">
+                    <button class="btn btn-grad" type="submit">
                         Sign in
                     </button>
                 </form>
