--- a/templates/user_profil/mailEdit.html.twig
+++ b/templates/user_profil/mailEdit.html.twig
@@ -8,7 +8,7 @@
     {{ form_errors(form) }}
     {{ form_row(form.email) }}
 <input type="submit" class="btn btn-primary">
-<a class="btn btn-primary" href="{{ path('user_profil') }}">Annuler</a>
+<a class="btn btn-grad" href="{{ path('user_profil') }}">Annuler</a>
 
 {{ form_end(form) }}
 
