--- a/templates/baseEmail.html.twig
+++ b/templates/baseEmail.html.twig
@@ -1,6 +1,7 @@
-<p><strong>★ The App</strong></p>
+<p><strong>★ My Quizz ★</strong></p>
 
 {% block body %}
 {% endblock %}
 
-<p>Cheers! <cite>The App</cite>,</p>
+<p>Toute l'équipe My Quizz, à bientôt</p>
+<img class="logo" src="{{ absolute_url(asset("media/kitten.jpg")) }}" alt="Logo My Quizz">
