--- a/templates/email/confirmEditPassword.html.twig
+++ b/templates/email/confirmEditPassword.html.twig
@@ -2,5 +2,14 @@
 
 {% block body %}
     {% set url = url('confirmed_edit_password', {token: user.confirmationToken, user: user.id, pwd: pwd}) %}
-    <p>Confirm your account at <a href="{{ url }}">{{ url }}</a></p>
+
+    <h1>Validation de votre nouveau mot de passe</h1>
+
+    <p>Vous recevez cette e-mail, car vous avez changé votre mot de passe !</p>
+    <p>Nous avons bien pris en compte votre demande, mais avant de pouvoir changer
+        votre mot de passe de manière définitive vous devez valider votre action. </p>
+    <p>Si vous n'avez pas demandé le changement de votre mot de passe, merci de ne pas prendre en compte cette e-mail</p>
+
+    <p>Confirmer votre nouveau mot de passe : <a href="{{ url }}">{{ url }}</a></p>
+
 {% endblock %}
