--- a/templates/quizz/index.html.twig
+++ b/templates/quizz/index.html.twig
@@ -12,6 +12,9 @@
                         <li><a class="btn btn-grad" href="{{url('show_quizz', {categorie: categorie.id})}}">{{categorie.name }}</a></li>
                     {% endfor %}
                 </ul>
+
+                <img class="logo" src="{{ asset("media/quizz.gif") }}" alt="Logo My Quizz">
+
             </div>
         </div>
     </div>
