--- a/templates/user_profil/passwordEdit.html.twig
+++ b/templates/user_profil/passwordEdit.html.twig
@@ -6,7 +6,7 @@
 
     {{ form_errors(form) }}
     {{ form_row(form.password) }}
-    <input type="submit" class="btn btn-primary">
+    <input type="submit" class="btn btn-grad btn-primary">
     <a class="btn btn-grad" href="{{ path('user_profil') }}">Annuler</a>
 
 {{ form_end(form) }}
