--- a/templates/user_profil/mailEdit.html.twig
+++ b/templates/user_profil/mailEdit.html.twig
@@ -7,7 +7,7 @@
 {{ form_start(form) }}
     {{ form_errors(form) }}
     {{ form_row(form.email) }}
-<input type="submit" class="btn btn-primary">
+<input type="submit" class="btn btn-grad btn-primary">
 <a class="btn btn-grad" href="{{ path('user_profil') }}">Annuler</a>
 
 {{ form_end(form) }}
