1st commit my-quizz project

--- a/templates/baseEmail.html.twig
+++ b/templates/baseEmail.html.twig
@@ -1,7 +1,7 @@
-<p><strong>★ My Quizz ★</strong></p>
+<h1> ★ My Quizz ★ </h1>
 
 {% block body %}
 {% endblock %}
 
-<p>Toute l'équipe My Quizz, à bientôt</p>
-<img class="logo" src="{{ absolute_url(asset("media/kitten.jpg")) }}" alt="Logo My Quizz">
+<p>(^◕ᴥ◕^) Toute l'équipe My Quizz, à bientôt ! </p>
+<img class="logo" src="{{ email.image('email/media/kitten.jpg') }}" alt="Logo My Quizz">
